# freebsd-chromium

./: .gitignore  Makefile  README.md  distinfo  pkg-plist  wip
broken/: patch-chrome__browser__geolocation__empty_device_data_provider.cc
files/: extra-patch-clang  extra-patch-fixup-ffmpeg  patch-app__app_base.gypi  patch-app__gfx__gl__gl_bindings.h  patch-app__gfx__gl__gl_context_egl.cc  patch-app__resource_bundle.cc  patch-app__surface__transport_dib.h  patch-app__surface__transport_dib_freebsd.cc  patch-base__base.gyp  patch-base__base.gypi  patch-base__debug__debugger_posix.cc  patch-base__debug__leak_annotations.h  patch-base__debug__proc_maps_linux.cc  patch-base__debug__stack_trace_posix.cc  patch-base__file_util_posix.cc  patch-base__linux_util.cc  patch-base__logging.h  patch-base__process__launch.cc  patch-base__process__launch.h  patch-base__process__util__freebsd.cc  patch-base__process_util.h  patch-base__process_util_linux.cc  patch-base__process_util_posix.cc  patch-base__sys_byteorder.h  patch-base__sys_info_freebsd.cc  patch-base__sys_info_posix.cc  patch-base__worker_pool_linux.cc  patch-build__build_config.h  patch-build__common.gypi  patch-build__features_override.gypi  patch-build__linux__python_arch.sh  patch-cc__layers__layer_impl.cc  patch-chrome__app__chrome_exe_main_gtk.cc  patch-chrome__app__chrome_main_delegate.cc  patch-chrome__app__generated_resources.grd  patch-chrome__browser__about_flags.cc  patch-chrome__browser__browser_about_handler.cc  patch-chrome__browser__browser_child_process_host.cc  patch-chrome__browser__child_process_launcher.cc  patch-chrome__browser__chrome_browser_main.cc  (+309 more)
www/chromium/: Makefile  Makefile.tests  distinfo  extra-patches  pkg-message  pkg-plist
www/chromium/files/: extra-patch-11  extra-patch-clang  extra-patch-fixup-execinfo  extra-patch-gcc  extra-patch-libc++-new  extra-patch-libc++-old  extra-patch-llvm-base  extra-patch-llvm-port  patch-3p-pdfium_3p_base_allocator_partition__allocator_page__allocator__internals__posix.h  patch-BUILD.gn  patch-apps_ui_views_app__window__frame__view.cc  patch-ash_display_mirror__window__controller.cc  patch-ash_shell.cc  patch-base_BUILD.gn  patch-base__base.gyp  patch-base__base.gypi  patch-base__debug__stack_trace_posix.cc  patch-base__file_util_posix.cc  patch-base__files__file_path_watcher_kqueue.h  patch-base__i18n__icu_util.cc  patch-base__i18n__icu_util.h  patch-base__posix__unix_domain_socket_linux.cc  patch-base__posix__unix_domain_socket_linux_unittest.cc  patch-base__process__internal_linux.h  patch-base__process__launch.cc  patch-base__process__launch.h  patch-base__process__memory_unittest.cc  patch-base__process__process_handle_freebsd.cc  patch-base__process__process_iterator.h  patch-base__process__process_iterator_freebsd.cc  patch-base__process__process_metrics.h  patch-base__process__process_metrics_freebsd.cc  patch-base__security_unittest.cc  patch-base__strings__safe_sprintf.cc  patch-base__sys_info_freebsd.cc  patch-base__sys_info_posix.cc  patch-base__test__expectations__expectation.cc  patch-base__test__launcher__test_launcher.cc  patch-base__threading__platform_thread_linux.cc  patch-base__threading__platform_thread_posix.cc  (+1107 more)
www/chromium/maintainer/: extra-patches  extra-patches-unbundle  rm-extra-patches
