--- base/third_party/libevent/BUILD.gn.orig	2017-02-02 02:02:47 UTC
+++ base/third_party/libevent/BUILD.gn
@@ -29,6 +29,9 @@ static_library("libevent") {
   } else if (is_linux) {
     sources += [ "epoll.c" ]
     include_dirs = [ "linux" ]
+  } else if (is_bsd) {
+    sources += [ "kqueue.c" ]
+    include_dirs = [ "freebsd" ]
   } else if (is_android) {
     sources += [ "epoll.c" ]
     include_dirs = [ "android" ]
