--- base/third_party/libevent/BUILD.gn.orig	2017-06-05 19:03:00 UTC
+++ base/third_party/libevent/BUILD.gn
@@ -50,6 +50,9 @@ static_library("libevent") {
       "linux/event-config.h",
     ]
     include_dirs = [ "linux" ]
+  } else if (is_bsd) {
+    sources += [ "kqueue.c" ]
+    include_dirs = [ "freebsd" ]
   } else if (is_android) {
     sources += [
       "android/config.h",
