--- build/config/linux/gtk3/BUILD.gn.orig	2017-06-05 19:03:01 UTC
+++ build/config/linux/gtk3/BUILD.gn
@@ -4,7 +4,7 @@
 
 import("//build/config/linux/pkg_config.gni")
 
-assert(is_linux, "This file should only be referenced on Linux")
+assert(is_linux || is_bsd, "This file should only be referenced on Linux")
 
 # Depend on //build/config/linux/gtk3 to use GTKv3. Depend on
 # //build/config/linux/gtk to get GTK 2 or 3 depending on the build flags.
