--- build/toolchain/gcc_toolchain.gni.orig	2016-11-10 21:02:09.000000000 +0100
+++ build/toolchain/gcc_toolchain.gni	2016-11-28 22:43:26.892375000 +0100
@@ -453,14 +453,23 @@
   }
 
   gcc_toolchain(target_name) {
-    prefix = rebase_path("$clang_base_path/bin", root_build_dir)
-    cc = "$prefix/clang"
-    cxx = "$prefix/clang++"
-    ld = cxx
+    if (is_bsd) {
+      cc = getenv("CC")
+      cxx = getenv("CXX")
+      ld = getenv("LD")
+      readelf = getenv("READELF")
+      ar = getenv("AR")
+      nm = getenv("NM")
+    } else {
+      prefix = rebase_path("$clang_base_path/bin", root_build_dir)
+      cc = "$prefix/clang"
+      cxx = "$prefix/clang++"
+      ld = cxx
 
-    readelf = "${toolprefix}readelf"
-    ar = "${toolprefix}ar"
-    nm = "${toolprefix}nm"
+      readelf = "${toolprefix}readelf"
+      ar = "${toolprefix}ar"
+      nm = "${toolprefix}nm"
+    }
 
     forward_variables_from(invoker, [ "strip" ])
 
