--- build/toolchain/gcc_toolchain.gni.orig	2016-11-10 22:02:09.000000000 +0200
+++ build/toolchain/gcc_toolchain.gni	2016-12-04 23:00:44.932756000 +0200
@@ -448,19 +448,28 @@
 template("clang_toolchain") {
   if (defined(invoker.toolprefix)) {
     toolprefix = invoker.toolprefix
-  } else {
+  } else if (!is_bsd) {
     toolprefix = ""
   }
 
   gcc_toolchain(target_name) {
-    prefix = rebase_path("$clang_base_path/bin", root_build_dir)
-    cc = "$prefix/clang"
-    cxx = "$prefix/clang++"
-    ld = cxx
+    if (is_bsd) {
+      cc = getenv("CC")
+      cxx = getenv("CXX")
+      ld = getenv("LD")
+      readelf = getenv("READELF")
+      ar = getenv("AR")
+      nm = getenv("NM")
+    } else {
+      prefix = rebase_path("$clang_base_path/bin", root_build_dir)
+      cc = "$prefix/clang"
+      cxx = "$prefix/clang++"
+      ld = cxx
 
-    readelf = "${toolprefix}readelf"
-    ar = "${toolprefix}ar"
-    nm = "${toolprefix}nm"
+      readelf = "${toolprefix}readelf"
+      ar = "${toolprefix}ar"
+      nm = "${toolprefix}nm"
+    }
 
     forward_variables_from(invoker, [ "strip" ])
 
