--- build/toolchain/gcc_toolchain.gni.orig	2016-11-10 22:02:09.000000000 +0200
+++ build/toolchain/gcc_toolchain.gni	2016-12-13 23:50:13.895728000 +0200
@@ -453,14 +453,23 @@
   }
 
   gcc_toolchain(target_name) {
-    prefix = rebase_path("$clang_base_path/bin", root_build_dir)
-    cc = "$prefix/clang"
-    cxx = "$prefix/clang++"
-    ld = cxx
+    if (is_bsd) {
+      cc = "${toolprefix}clang"
+      cxx = "${toolprefix}clang++"
+      ld = cxx
+      ar = "${toolprefix}llvm-ar"
+      nm = "${toolprefix}llvm-nm"
+      readelf = "readelf"
+    } else {
+      prefix = rebase_path("$clang_base_path/bin", root_build_dir)
+      cc = "$prefix/clang"
+      cxx = "$prefix/clang++"
+      ld = cxx
 
-    readelf = "${toolprefix}readelf"
-    ar = "${toolprefix}ar"
-    nm = "${toolprefix}nm"
+      readelf = "${toolprefix}readelf"
+      ar = "${toolprefix}ar"
+      nm = "${toolprefix}nm"
+    }
 
     forward_variables_from(invoker, [ "strip" ])
 
