--- build/toolchain/linux/BUILD.gn.orig	2016-11-10 21:02:09.000000000 +0100
+++ build/toolchain/linux/BUILD.gn	2016-11-28 23:03:08.386899000 +0100
@@ -6,7 +6,9 @@
 import("//build/toolchain/gcc_toolchain.gni")
 
 clang_toolchain("clang_arm") {
-  toolprefix = "arm-linux-gnueabihf-"
+  if (!is_bsd) {
+    toolprefix = "arm-linux-gnueabihf-"
+  }
   toolchain_args = {
     current_cpu = "arm"
     current_os = "linux"
@@ -14,7 +16,9 @@
 }
 
 clang_toolchain("clang_arm64") {
-  toolprefix = "aarch64-linux-gnu-"
+  if (!is_bsd) {
+    toolprefix = "aarch64-linux-gnu-"
+  }
   toolchain_args = {
     current_cpu = "arm64"
     current_os = "linux"
