--- build/toolchain/linux/BUILD.gn.orig	2017-07-01 01:19:34.918465000 +0200
+++ build/toolchain/linux/BUILD.gn	2017-07-01 01:19:56.675777000 +0200
@@ -14,7 +14,6 @@
 }
 
 clang_toolchain("clang_arm64") {
-  toolprefix = "aarch64-linux-gnu-"
   toolchain_args = {
     current_cpu = "arm64"
     current_os = "linux"
