--- chrome/browser/BUILD.gn.orig	2017-06-05 19:03:01 UTC
+++ chrome/browser/BUILD.gn
@@ -2296,7 +2296,7 @@ split_static_library("browser") {
     deps += [ "//device/udev_linux" ]
   }
 
-  if (is_linux && !is_chromeos) {
+  if ((is_linux || is_bsd) && !is_chromeos) {
     deps += [ "//third_party/speech-dispatcher" ]
   }
 
@@ -3721,7 +3721,7 @@ split_static_library("browser") {
     }
   }
 
-  if (is_linux) {
+  if (is_linux || is_bsd) {
     if (use_aura) {
       deps += [ "//build/linux:fontconfig" ]
       if (use_dbus) {
