--- chrome/test/BUILD.gn.orig	2019-09-09 21:55:11 UTC
+++ chrome/test/BUILD.gn
@@ -5664,7 +5664,7 @@ test("chrome_app_unittests") {
     "//components/flags_ui:switches",
     "//components/tracing",
   ]
-  if (!is_fuchsia) {
+  if (!is_fuchsia && !is_bsd) {
     # TODO(crbug.com/753619): Enable crash reporting on Fuchsia.
     deps += [ "//third_party/breakpad:client" ]
   }
