--- chrome/test/BUILD.gn.orig	2019-12-16 21:51:24 UTC
+++ chrome/test/BUILD.gn
@@ -5869,7 +5869,7 @@ test("chrome_app_unittests") {
     "//components/safe_browsing:buildflags",
     "//components/tracing",
   ]
-  if (!is_fuchsia) {
+  if (!is_fuchsia && !is_bsd) {
     # TODO(crbug.com/753619): Enable crash reporting on Fuchsia.
     deps += [ "//third_party/breakpad:client" ]
   }
