--- chromecast/browser/BUILD.gn.orig	2017-06-05 19:03:05 UTC
+++ chromecast/browser/BUILD.gn
@@ -125,7 +125,7 @@ source_set("browser") {
     "//ui/gl",
   ]
 
-  if (is_linux) {
+  if (is_linux || is_bsd) {
     sources += [
       "cast_content_window_linux.cc",
       "cast_content_window_linux.h",
