--- chromecast/browser/metrics/BUILD.gn.orig	2017-02-02 02:02:51 UTC
+++ chromecast/browser/metrics/BUILD.gn
@@ -26,7 +26,7 @@ source_set("metrics") {
     "//content/public/common",
   ]
 
-  if (is_linux) {
+  if (is_linux || is_bsd) {
     sources += [
       "external_metrics.cc",
       "external_metrics.h",
