--- components/crash/content/app/BUILD.gn.orig	2017-06-05 19:03:05 UTC
+++ components/crash/content/app/BUILD.gn
@@ -153,7 +153,7 @@ source_set("app_non_mac_win") {
       "//breakpad:breakpad_handler",
       "//sandbox",
     ]
-  } else if (is_posix && !is_ios) {
+  } else if (is_posix && !is_ios && !is_bsd) {
     deps += [ "//breakpad:client" ]
   }
 }
