--- components/crash/content/app/BUILD.gn.orig	2019-09-09 21:55:14 UTC
+++ components/crash/content/app/BUILD.gn
@@ -54,7 +54,7 @@ static_library("app") {
     sources += [ "crashpad.cc" ]
   }
 
-  if (is_linux) {
+  if (is_linux && !is_bsd) {
     sources += [
       "breakpad_linux.cc",
       "breakpad_linux.h",
@@ -96,7 +96,7 @@ static_library("app") {
       "//sandbox",
     ]
 
-    if (is_linux) {
+    if (is_linux && !is_bsd) {
       deps += [
         "//content/public/common",
         "//third_party/breakpad:client",
