--- components/storage_monitor/BUILD.gn.orig	2019-09-09 21:55:15 UTC
+++ components/storage_monitor/BUILD.gn
@@ -79,6 +79,13 @@ static_library("storage_monitor") {
     }
   }
 
+  if (is_bsd) {
+    sources += [
+      "storage_monitor_freebsd.cc",
+      "storage_monitor_freebsd.h",
+    ]
+  }
+
   if (use_udev) {
     sources += [
       "udev_util_linux.cc",
