--- content/browser/BUILD.gn.orig	2019-09-09 21:55:16 UTC
+++ content/browser/BUILD.gn
@@ -2615,7 +2615,7 @@ jumbo_source_set("browser") {
       "//chromeos/network",
       "//components/session_manager/core",
     ]
-  } else {
+  } else if (!is_bsd) {
     sources += [
       # ChromeOS accessibility metrics provider is in chromeos_metrics_provider.
       "accessibility/accessibility_metrics_provider.cc",
