--- content/common/BUILD.gn.orig	2018-03-20 23:05:24.000000000 +0100
+++ content/common/BUILD.gn	2018-03-24 17:15:15.373216000 +0100
@@ -431,6 +431,10 @@
     libs += [ "android" ]
   }
 
+  if (is_bsd) {
+    sources -= [ "quarantine/quarantine_linux.cc" ]
+  }
+
   if (is_debug && !is_component_build && enable_plugins) {
     # Content depends on the PPAPI message logging stuff; if this isn't here,
     # some unit test binaries won't compile. This only worked in release mode
