--- device/BUILD.gn.orig	2017-02-02 02:02:54 UTC
+++ device/BUILD.gn
@@ -184,7 +184,7 @@ test("device_unittests") {
     ]
   }
 
-  if ((is_chromeos || is_linux) && use_dbus) {
+  if ((is_chromeos || is_linux || is_bsd) && use_dbus) {
     configs += [ "//build/config/linux/dbus" ]
 
     sources += [
