--- device/BUILD.gn.orig	2017-06-05 19:03:07 UTC
+++ device/BUILD.gn
@@ -206,7 +206,7 @@ test("device_unittests") {
     ]
   }
 
-  if ((is_chromeos || is_linux) && use_dbus) {
+  if ((is_chromeos || is_linux || is_bsd) && use_dbus) {
     configs += [ "//build/config/linux/dbus" ]
 
     sources += [
