--- device/geolocation/BUILD.gn.orig	2017-06-05 19:03:07 UTC
+++ device/geolocation/BUILD.gn
@@ -89,7 +89,7 @@ component("geolocation") {
   if (is_android) {
     sources -= [ "wifi_data_provider_common.cc" ]
   }
-  if (is_chromeos || (is_linux && !use_dbus)) {
+  if (is_chromeos || (is_linux && !use_dbus) || is_bsd) {
     sources -= [ "wifi_data_provider_linux.cc" ]
   }
   if (is_linux && use_dbus) {
