--- device/hid/BUILD.gn.orig	2017-11-26 11:02:16.842198000 +0100
+++ device/hid/BUILD.gn	2017-11-26 11:05:35.197134000 +0100
@@ -93,6 +93,21 @@
     ]
   }
 
+  if (is_bsd) {
+    sources -= [
+      "hid_connection_linux.cc",
+      "hid_connection_linux.h",
+    ]
+    sources += [
+      "hid_connection_freebsd.cc",
+      "hid_connection_freebsd.h",
+      "hid_device_info_freebsd.cc",
+      "hid_device_info_freebsd.h",
+      "hid_service_freebsd.cc",
+      "hid_service_freebsd.h",
+    ]
+  }
+
   if (is_chromeos) {
     deps += [ "//chromeos" ]
   }
