--- gpu/config/BUILD.gn.orig	2016-08-03 22:02:19.000000000 +0300
+++ gpu/config/BUILD.gn	2016-09-25 07:44:51.146837000 +0300
@@ -8,7 +8,8 @@
 
 declare_args() {
   # Use the PCI lib to collect GPU information on Linux.
-  use_libpci = is_linux && (!is_chromecast || is_cast_desktop_build) &&
+  use_libpci = (is_linux || is_bsd) &&
+               (!is_chromecast || is_cast_desktop_build) &&
                (use_x11 || use_ozone)
 }
 
@@ -97,6 +98,14 @@
       ]
     }
   }
+
+  if (is_bsd) {
+    sources -= [
+      "gpu_info_collector_linux.cc",
+      "gpu_info_collector_linux.h"
+    ]
+  }
+
   if (is_mac) {
     libs = [
       "IOKit.framework",
@@ -105,7 +114,9 @@
   }
   if (use_libpci) {
     defines = [ "USE_LIBPCI=1" ]
-    deps += [ "//build/linux/libpci" ]
+    configs += [
+      "//build/config/linux:libpci",
+    ]
   }
   if (is_linux && use_x11) {
     configs += [
