--- services/service_manager/runner/host/BUILD.gn.orig	2017-06-05 19:03:11 UTC
+++ services/service_manager/runner/host/BUILD.gn
@@ -28,7 +28,7 @@ source_set("lib") {
     "//mojo/public/cpp/system",
   ]
 
-  if (is_linux && !is_android) {
+  if (is_linux && !is_android && !is_bsd) {
     deps += [ "//sandbox/linux:sandbox_services" ]
   }
 }
