--- third_party/angle/BUILD.gn.orig	2019-09-09 21:56:55 UTC
+++ third_party/angle/BUILD.gn
@@ -340,6 +340,7 @@ angle_static_library("angle_gpu_info_util") {
         "X11",
         "Xi",
         "Xext",
+        "GL",
       ]
     }
   }
@@ -1009,10 +1010,6 @@ foreach(is_shared_library,
 
     if (is_linux) {
       sources += util_linux_sources
-      libs += [
-        "rt",
-        "dl",
-      ]
     }
 
     if (is_mac) {
