--- third_party/angle/gni/angle.gni.orig	2017-03-09 20:05:21 UTC
+++ third_party/angle/gni/angle.gni
@@ -20,6 +20,8 @@ if (is_win) {
   import("//build/config/win/visual_studio_version.gni")
 } else if (is_linux && use_x11 && !is_chromeos) {
   angle_enable_gl = true
+} else if (is_bsd) {
+  angle_enable_gl = true
 } else if (is_mac || ozone_platform_gbm) {
   angle_enable_gl = true
 } else if (is_android) {
