--- third_party/angle/src/third_party/libXNVCtrl/BUILD.gn.orig	2016-08-03 22:03:18.000000000 +0300
+++ third_party/angle/src/third_party/libXNVCtrl/BUILD.gn	2016-09-18 02:50:36.619242000 +0300
@@ -11,6 +11,9 @@
   cflags = [
     "-Wno-incompatible-pointer-types-discards-qualifiers",
   ]
+  if (is_bsd) {
+    include_dirs = ["/usr/local/include"]
+  }
 }
 
 source_set("libXNVCtrl") {
