--- third_party/blink/tools/BUILD.gn.orig	2019-09-16 10:28:53 UTC
+++ third_party/blink/tools/BUILD.gn
@@ -11,7 +11,7 @@ action("build_wpt_metadata") {
     rebase_path("$root_out_dir/wpt_expectations_metadata"),
   ]
   outputs = [
-    "$root_out_dir/wpt_expectations_metadata/",
+    "$root_out_dir/wpt_expectations_metadata",
   ]
   data = [
     # Include the blinkpy tools to access expectations data
